﻿Version 2.17.0
- Extension now installs for a single user, rather than all users. This enables it to auto-update.
MVC 6
- RC2 ASPNET_ENVIRONMENT is now renamed to ASPNETCORE_ENVIRONMENT.

Version 2.16.0
MVC 6
- Added HttpRequestExtensions IsLocalRequest extension method.
- Modified launchSettings.json so that the site starts on the same port when started from Kestrel or IIS Express.

Version 2.15.0
MVC 6
- Boilerplate.Web.Mvc6 Updated:
	- Performance improvements.
	- Added ICommand and IAsyncCommand interfaces to help implement controller actions as separate classes.
	- Refactored the DistributedCacheExtensions.
	- Added ValidateModelStateAttribute to automatically validate ModelState.
- Boilerplate.Web.Mvc6.TagHelpers Updated:
	- Performance improvements.
- Fixed Missing jshint and jslint (See https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/89).
- Updated JSON.NET reference.
- Updated font-awesome to 4.6.1.
- Updated jQuery to 2.2.2.
- Updated jQuery validate to 1.15.0.
- Updated jQuery validate npm package to 3.2.5.
- Updated gulp to 2.9.1.
- Updated gulp-csslint to 0.3.0.
- Updated gulp-cssnano to 2.1.1.
- Updated gulp-plumber to 1.1.0.
- Updated gulp-size to 2.1.0.
- Updated gulp-typescript to 2.13.0.
- Updated gulp-tslint to 4.3.5.
- Updated gulp-uglify to 1.5.3.
- Updated psi to 2.0.3.
- Updated rimraf to 2.5.2.
- Deleted tsconfig.html and moved comments to tsconfig.json as it now supports comments.

Version 2.14.0
MVC 6
- Change error controller route to start at 400 to 599.

Version 2.13.0
MVC 6
- Merged [Fixed problem with broken error handling on ReExecute](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/pull/85).
- Merged [Fixes problem with returning BadGateway for StatusCodes below 200](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/pull/87).

Version 2.12.0
MVC 5
- Add a note when debugging, always starts the site at the home page (See [this](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/84) issue).
